test/visibility/private/iters/usesOther.good
usesOther.chpl:3: error: unresolved call 'foo(2)'
usesOther.chpl:3: note: because no functions named foo found in scope
