test/visibility/private/iters/usesOther.chpl
use definesPrivate;

writeln(foo(2));
// Ensures that the private module level variable foo is not visible
// when definesPrivate is used.
